--- a/css/index.css
+++ b/css/index.css
@@ -87,6 +87,7 @@ body{
     width: 100%;
     position:fixed;
     z-index: 5;
+    opacity:0.8;
     background-color:#020202;
     transform: translateY(-200%);
     display: flex;
@@ -480,6 +481,7 @@ body{
     display: block;
 }
 .about-second-line{
+
     opacity: .8;
     font-size: 18px;
     font-weight: 200;
@@ -566,6 +568,9 @@ body{
 }
 .colors{
     color: whitesmoke;
+}
+.about-first-paragraph-wow{
+    text-align: center;
 }
 .services-content{
     height: auto;
@@ -709,7 +714,7 @@ body{
     border-radius: 10px;
     background: #c70039;
 }
-.adobe-progress{
+.Discord-progress{
     position: absolute;
     top:10%;
     left:1%;
@@ -735,7 +740,7 @@ body{
     background: #c70039;
     transition: all .4s ease;
 }
-.jquery-progress{
+.Adobe-progress{
     position: absolute;
     top:10%;
     left:1%;
@@ -748,7 +753,7 @@ body{
     border-radius: 10px;
     background: #c70039;
 }
-.seo-progress{
+.Csh-progress{
     position: absolute;
     top:10%;
     left:1%;
@@ -900,6 +905,7 @@ padding-bottom: 40px;
     flex-direction: column;
     justify-content: center;
     overflow: hidden;
+    text-align: right;
 }
 #portfolio{
     display: none;
