--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:300&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Monoton&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins:500&display=swap');
+
 body{
   padding: 0;
   margin: 0;
@@ -30,7 +34,7 @@ body{
   padding: 20px 20px 20px 30px;
   color: #fff;
   font-size: 20px;
-  font-family: sans-serif;
+  font-family: raleway;
   text-decoration: none;
   letter-spacing: 5px;
   transition: .5s;
