--- a/css/index.css
+++ b/css/index.css
@@ -216,7 +216,7 @@ body{
 }
 #navigation-bar img:hover{
     opacity: 1;
-    transform:rotate(-45deg);
+    transform:rotate(-360deg);
 }
 .header-image img{
     height: 100vh;
@@ -492,13 +492,13 @@ body{
     flex-direction: row;
 }
 .about-img img{
-    width: 100%;
-    height:380px;
+    width: 20%;
+    height:20%;
     padding: 30px;
     border-radius: 40px;
 }
 .about-img {
-    width: 550px;
+    width: 20%;
     height:auto;
     padding: 30px;
     padding-top: 10px;
@@ -1483,14 +1483,14 @@ For devices with smaller width like mobile phone
         width: 280px;
         height:220px;
         padding: 5px;
-        border-radius: 10%;
+        border-radius: 50%;
     }
     .about-img {
         width: 100%;
         height:250px;
         text-align: center;
         overflow: hidden;
-        border-radius: 10%;
+        border-radius: 50%;
     }
     .service{
         height:320px;
@@ -1937,7 +1937,7 @@ for tabs and large phones
         width: 100%;
         height:380px;
         padding: 30px;
-        border-radius: 40px;
+        border-radius: 50%;
     }
     .about-img {
         width: 550px;
@@ -2288,14 +2288,14 @@ for tabs and large phones
         width: 100%;
         height:450px;
         padding: 30px;
-        border-radius: 40px;
+        border-radius: 50%;
         animation: opacity 1.4s ease ;
     }
     .about-img {
         width: 40%;
         height:450px;
         padding: 30px;
-        border-radius: 40px;
+        border-radius: 50%;
     }
     .about-first-line{
         font-size: 45px;
