--- a/css/color-red.css
+++ b/css/color-red.css
@@ -33,16 +33,16 @@
 .js-progress{
     background: #c70039;
 }
-.adobe-progress{
+.Discord-progress{
     background: #c70039;
 }
 .php-progress{
     background: #c70039;
 }
-.jquery-progress{
+.Adobe-progress{
     background: #c70039;
 }
-.seo-progress{
+.Csh-progress{
     background: #c70039;
 }
 .portfolio-text h2{
