--- a/css/index.css
+++ b/css/index.css
@@ -221,6 +221,7 @@ body{
 .header-image img{
     height: 100vh;
     float: right;
+    
 }
 .header-image{
     float: right;
@@ -492,17 +493,17 @@ body{
     flex-direction: row;
 }
 .about-img img{
-    width: 20%;
-    height:20%;
-    padding: 30px;
-    border-radius: 40px;
+    width: 80%;
+    height:80%;
+    padding: 20px;
+    border-radius: 50%;
 }
 .about-img {
-    width: 20%;
+    width: 50%;
     height:auto;
     padding: 30px;
     padding-top: 10px;
-    border-radius: 40px;
+    border-radius: 50%;
 }
 
 #about-content a{
@@ -1480,14 +1481,14 @@ For devices with smaller width like mobile phone
         flex-direction: column-reverse;
     }
     .about-img img{
-        width: 280px;
-        height:220px;
+        width: 90%;
+        height:90%;
         padding: 5px;
         border-radius: 50%;
     }
     .about-img {
-        width: 100%;
-        height:250px;
+        width: 50%;
+        height:50%;
         text-align: center;
         overflow: hidden;
         border-radius: 50%;
@@ -1934,16 +1935,16 @@ for tabs and large phones
         flex-direction: column-reverse;
     }
     .about-img img{
-        width: 100%;
-        height:380px;
-        padding: 30px;
+        width: 80%;
+        height:80%;
+        padding: 10px;
         border-radius: 50%;
     }
     .about-img {
-        width: 550px;
+        width: 50%;
         height:auto;
         padding: 30px;
-        padding-top: 10px;
+        padding-left: 60px;
         border-radius: 40px;
     }
     .cv a button{
@@ -2285,15 +2286,15 @@ for tabs and large phones
         width: 40%;
     }
     .about-img img{
-        width: 100%;
-        height:450px;
+        width: 80%;
+        height:80%;
         padding: 30px;
         border-radius: 50%;
         animation: opacity 1.4s ease ;
     }
     .about-img {
-        width: 40%;
-        height:450px;
+        width: 50%;
+        height:50%;
         padding: 30px;
         border-radius: 50%;
     }
