--- a/css/style.css
+++ b/css/style.css
@@ -12,30 +12,31 @@ body{
   height: 100vh;
   background: #1f1d1d;
 }
-#main{
-  position: static;
-  margin: auto;
-  width: 20%;
+.main{
+  width: 50%;
   height: 50%;
-  padding: 10px;
-
+  display: flex;
+  justify-content: space-between;
 }
-
 
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
 }
 
-#butEN{
-  position: relative;
-  left: 70%;
-  top: 50%;
+#p{
+  position: absolute ;
+ 
+  left: 45%;
+  top: 40%;
 }
-#butFA{
-  position: relative;
-  right: 30%;
-  top: 50%;
+#a{
+  position: absolute ;
+ 
+  left: 45%;
+  top: 60%;
+  
+  
 }
 .logo img{
   height: 80px;
@@ -53,7 +54,7 @@ input[type=number] {
 }
 #a{
   position: absolute;
-  padding: 20px 20px 20px 20px;
+  padding: 20px 35px 20px 35px;
   color: #fff;
   font-size: 25px;
   font-family:iranian sans;
@@ -62,6 +63,7 @@ input[type=number] {
   transition: .5s;
 }
 #a:hover{
+  position: absolute;
   background: #00ccff;
   transition-delay: 1.5s;
   box-shadow: -30px 30px 50px rgba(0,0,0,.4);
@@ -69,8 +71,9 @@ input[type=number] {
 }
 #a:before,
 #a:after{
-  content: "";
   position: absolute;
+  content: "";
+  
   height: 100%;
   width: 2px;
   background: #ccff33;
@@ -81,15 +84,17 @@ input[type=number] {
 
 }
 #a:before{
+  position: absolute;
   top: 0;
   left:0;
 }
 #a:after{
+  position: absolute;
   top: 0;
   right:0;
 }
 #a:hover:before{
-  
+  position: absolute;
   width:100%;
   opacity:0.1;
   transform:translate(5px,-5px);
@@ -97,7 +102,7 @@ input[type=number] {
   transition-delay: 0s,0.5s,1s,1.5s
 }
 #a:hover:after{
-  
+  position: absolute;
   width:100%;
   opacity:0.1;
   transform:translate(10px,-10px);
@@ -108,7 +113,7 @@ input[type=number] {
 
 #p{
   position: absolute;
-  padding: 20px 20px 20px 30px;
+  padding: 20px 20px 20px 20px;
   color: #fff;
   font-size: 20px;
   font-family: cursive;
@@ -119,7 +124,7 @@ input[type=number] {
 }
 #p:hover{
   background: #00ccff;
-  transition-delay: 2s;
+  transition-delay: 1s;
   box-shadow: -30px 30px 50px rgba(0,0,0,.4);
   transform: rotate(20deg) skew(-15deg);
 }
