--- a/css/index.css
+++ b/css/index.css
@@ -2567,3 +2567,110 @@ for tabs and large phones
         transition: all .4s ease;
     }
 }
+
+
+
+.loading {
+    
+    height: 160px;
+    width: 160px;
+   
+  }
+  
+  .loading span {
+    display: block;
+    height: 89%;
+    width: 89%;
+    border: 1px solid transparent;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
+  }
+  
+  /* this was a fail. i'm not sure how to get the nested children. o_O */
+  .loading span:nth-child(1) {
+    -webkit-animation: spin 1.89s infinite linear;
+  }
+  
+  /* this was a fail. i'm not sure how to get the nested children. o_O */
+  .loading span:nth-child(2) {
+    -webkit-animation: spin 2.78s infinite linear;
+  }
+  
+  /* this was a fail. i'm not sure how to get the nested children. o_O */
+  .loading span:nth-child(3) {
+    -webkit-animation: spin 3.67s infinite linear;
+  }
+  
+  /* this was a fail. i'm not sure how to get the nested children. o_O */
+  .loading span:nth-child(4) {
+    -webkit-animation: spin 4.56s infinite linear;
+  }
+  
+  /* this was a fail. i'm not sure how to get the nested children. o_O */
+  .loading span:nth-child(5) {
+    -webkit-animation: spin 5.45s infinite linear;
+  }
+  
+  /* this was a fail. i'm not sure how to get the nested children. o_O */
+  .loading span:nth-child(6) {
+    -webkit-animation: spin 6.34s infinite linear;
+  }
+  
+  /* this was a fail. i'm not sure how to get the nested children. o_O */
+  .loading span:nth-child(7) {
+    -webkit-animation: spin 7.23s infinite linear;
+  }
+  
+  /* this was a fail. i'm not sure how to get the nested children. o_O */
+  .loading span:nth-child(8) {
+    -webkit-animation: spin 8.12s infinite linear;
+  }
+  
+  /* this was a fail. i'm not sure how to get the nested children. o_O */
+  .loading span:nth-child(9) {
+    -webkit-animation: spin 9.01s infinite linear;
+  }
+  
+  /* this was a fail. i'm not sure how to get the nested children. o_O */
+  .loading span:nth-child(10) {
+    -webkit-animation: spin 9.9s infinite linear;
+  }
+  
+  /* this was a fail. i'm not sure how to get the nested children. o_O */
+  .loading span:nth-child(11) {
+    -webkit-animation: spin 10.79s infinite linear;
+  }
+  
+  /* this was a fail. i'm not sure how to get the nested children. o_O */
+  .loading span:nth-child(12) {
+    -webkit-animation: spin 11.68s infinite linear;
+  }
+  
+  /* this was a fail. i'm not sure how to get the nested children. o_O */
+  .loading span:nth-child(13) {
+    -webkit-animation: spin 12.57s infinite linear;
+  }
+  
+  /* this was a fail. i'm not sure how to get the nested children. o_O */
+  .loading span:nth-child(14) {
+    -webkit-animation: spin 13.46s infinite linear;
+  }
+  
+  /* this was a fail. i'm not sure how to get the nested children. o_O */
+  .loading span:nth-child(15) {
+    -webkit-animation: spin 14.35s infinite linear;
+  }
+  
+  /* this was a fail. i'm not sure how to get the nested children. o_O */
+  .loading span:nth-child(16) {
+    -webkit-animation: spin 15.24s infinite linear;
+  }
+  
+  @-webkit-keyframes spin {
+    0% {
+      -webkit-transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+    }
+  }
